[gd_scene load_steps=6 format=4 uid="uid://cb5vkdeg84bs0"]

[ext_resource type="TileSet" uid="uid://dc6gxn1ox7dsj" path="res://scripts/hextile_tilemap/hextile_tilemap_tileset.tres" id="1_ppcla"]
[ext_resource type="Script" path="res://scripts/hextile_tilemap/hextile_tilemap_base.gd" id="2_sityj"]
[ext_resource type="Script" path="res://scripts/hextile_tilemap/hextile_tilemap_generator.gd" id="3_bfsdo"]
[ext_resource type="TileSet" uid="uid://cqggt5vyfv1ud" path="res://scripts/hextile_tilemap/hextile_arrows.tres" id="4_jvagr"]
[ext_resource type="Script" path="res://scripts/hextile_tilemap/hextile_arrows.gd" id="5_hma6e"]

[node name="hextile_tilemap_base" type="TileMapLayer" groups=["hextile_map"]]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAABAAAAAAABAAAAAAAAAAEAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAACAAIAAAABAAAAAAACAAEAAAABAAAAAAADAAEAAAABAAAAAAADAAIAAAABAAAAAAACAAMAAAABAAAAAAADAAMAAAABAAAAAAAEAAMAAAABAAAAAAAEAAIAAAABAAAAAAAAAAIAAAACAAAAAAAAAAMAAAABAAAAAAABAAMAAAABAAAAAAAFAAIAAAABAAAAAAAGAAIAAAABAAAAAAAGAAEAAAABAAAAAAAFAAEAAAABAAAAAAADAAAAAAABAAAAAAACAAAAAAABAAAAAAAEAAEAAAABAAAAAAAHAAIAAAABAAAAAAAIAAMAAAABAAAAAAAHAAMAAAABAAAAAAAGAAQAAAACAAAAAAAFAAMAAAADAAAAAAAEAAQAAAABAAAAAAACAAQAAAACAAAAAAADAAUAAAACAAAAAAAEAAUAAAACAAAAAAAFAAQAAAACAAAAAAAGAAMAAAACAAAAAAADAP//AAACAAAAAAAEAAAAAAACAAAAAAAFAP//AAACAAAAAAAFAAAAAAACAAAAAAAGAAAAAAACAAAAAAAHAAAAAAACAAAAAAAIAAAAAAACAAAAAAAJAAAAAAACAAAAAAAKAAEAAAACAAAAAAAKAAIAAAACAAAAAAALAAIAAAACAAAAAAAOAAUAAAACAAAAAAANAAQAAAABAAAAAAAMAAQAAAABAAAAAAALAAQAAAABAAAAAAAKAAQAAAABAAAAAAAJAAQAAAABAAAAAAAJAAMAAAABAAAAAAAKAAMAAAADAAAAAAAMAAMAAAADAAAAAAADAAQAAAABAAAAAAAGAAUAAAABAAAAAAAHAAUAAAABAAAAAAAHAAQAAAABAAAAAAAIAAYAAAABAAAAAAD9//3/AAABAAAAAAD8//7/AAADAAAAAAD7//7/AAABAAAAAAD8////AAACAAAAAAD9//7/AAABAAAAAAD+//7/AAABAAAAAAD///3/AAADAAAAAAAAAP3/AAADAAAAAAABAPz/AAABAAAAAAD+////AAABAAAAAAD9////AAABAAAAAAD7////AAABAAAAAAD8/wAAAAABAAAAAAD///7/AAADAAAAAAAAAP7/AAADAAAAAAABAP3/AAABAAAAAAACAP3/AAABAAAAAAAAAP//AAABAAAAAAABAP7/AAABAAAAAAACAP7/AAABAAAAAAADAP3/AAADAAAAAAADAP7/AAABAAAAAAD/////AAABAAAAAAAEAP7/AAABAAAAAAAEAP3/AAABAAAAAAAFAPz/AAABAAAAAAAGAPz/AAADAAAAAAAFAPv/AAADAAAAAAAEAPv/AAABAAAAAAADAPr/AAABAAAAAAACAPv/AAABAAAAAAABAPv/AAABAAAAAAAAAPz/AAABAAAAAAD///z/AAABAAAAAAD+//3/AAACAAAAAAD9//z/AAABAAAAAAD8//3/AAABAAAAAAD7//z/AAABAAAAAAD6//3/AAABAAAAAAD5//z/AAABAAAAAAD5//3/AAABAAAAAAD6//7/AAABAAAAAAD7//3/AAADAAAAAAD+//z/AAACAAAAAAACAPz/AAADAAAAAAADAPv/AAADAAAAAAADAPz/AAACAAAAAAAEAPz/AAABAAAAAAAHAPz/AAADAAAAAAABAPr/AAABAAAAAAAAAPr/AAABAAAAAAD///r/AAABAAAAAAD+//r/AAABAAAAAAD9//r/AAABAAAAAAD8//v/AAABAAAAAAD7//r/AAABAAAAAAD6//v/AAABAAAAAAD5//v/AAABAAAAAAD4//z/AAABAAAAAAD4//3/AAABAAAAAAD7/wAAAAABAAAAAAD8/wEAAAABAAAAAAD8/wIAAAABAAAAAAD9/wIAAAACAAAAAAD8/wMAAAACAAAAAAD9/wMAAAABAAAAAAD+/wMAAAABAAAAAAD//wIAAAABAAAAAAD7/wMAAAABAAAAAAD6/wMAAAABAAAAAAD5/wMAAAABAAAAAAD5/wIAAAABAAAAAAD4/wMAAAABAAAAAAD7/wIAAAABAAAAAAD9/wEAAAABAAAAAAD+/wIAAAABAAAAAAD//wEAAAACAAAAAAD//wAAAAABAAAAAAD///v/AAACAAAAAAD7//v/AAABAAAAAAAIAAUAAAABAAAAAAAHAP//AAACAAAAAAAIAP//AAACAAAAAAAJAP//AAACAAAAAAAKAP7/AAACAAAAAAALAP7/AAACAAAAAAALAP//AAACAAAAAAAMAP7/AAACAAAAAAAMAP//AAACAAAAAAANAP//AAACAAAAAAAOAP//AAACAAAAAAAOAP7/AAACAAAAAAAOAP3/AAACAAAAAAANAP3/AAACAAAAAAANAPz/AAACAAAAAAAMAPv/AAACAAAAAAAMAPz/AAACAAAAAAALAP3/AAACAAAAAAAMAP3/AAACAAAAAAANAP7/AAACAAAAAAAKAP3/AAACAAAAAAAKAPz/AAACAAAAAAAKAPv/AAACAAAAAAAKAPr/AAACAAAAAAAKAPn/AAACAAAAAAALAPz/AAABAAAAAAALAPv/AAABAAAAAAALAPr/AAABAAAAAAALAPn/AAABAAAAAAAKAPj/AAABAAAAAAAJAPn/AAABAAAAAAAJAPr/AAABAAAAAAAJAPv/AAABAAAAAAAJAPz/AAABAAAAAAAJAP3/AAABAAAAAAAJAP7/AAABAAAAAAAIAP3/AAABAAAAAAAIAP7/AAABAAAAAAAIAPz/AAABAAAAAAAHAP3/AAABAAAAAAAGAP3/AAABAAAAAAADAAYAAAACAAAAAAAFAAUAAAADAAAAAAAFAAYAAAADAAAAAAAFAAcAAAADAAAAAAAFAAgAAAABAAAAAAAGAAgAAAADAAAAAAAGAAkAAAADAAAAAAAHAAoAAAADAAAAAAAIAAoAAAADAAAAAAAJAAsAAAADAAAAAAAKAAoAAAADAAAAAAAKAAkAAAADAAAAAAAJAAoAAAADAAAAAAAIAAkAAAADAAAAAAAHAAkAAAADAAAAAAAGAAcAAAABAAAAAAAHAAgAAAABAAAAAAAHAAcAAAABAAAAAAAHAAYAAAABAAAAAAAGAAYAAAABAAAAAAAIAAcAAAABAAAAAAAJAAgAAAABAAAAAAAKAAgAAAABAAAAAAAKAAcAAAABAAAAAAALAAcAAAABAAAAAAAKAAYAAAABAAAAAAAJAAcAAAABAAAAAAAJAAkAAAABAAAAAAAIAAgAAAABAAAAAAAEAAkAAAABAAAAAAAFAAkAAAABAAAAAAAEAAgAAAABAAAAAAAEAAcAAAABAAAAAAADAAcAAAABAAAAAAAFAAoAAAABAAAAAAAFAAsAAAABAAAAAAAGAAsAAAABAAAAAAAHAAwAAAABAAAAAAAIAAwAAAABAAAAAAAJAAwAAAABAAAAAAAKAAwAAAABAAAAAAAIAAsAAAABAAAAAAAHAAsAAAABAAAAAAAGAAoAAAABAAAAAAAEAAYAAAABAAAAAAD//wgAAAABAAAAAAAAAAcAAAABAAAAAAAAAAYAAAABAAAAAAAAAAUAAAABAAAAAAA=")
tile_set = ExtResource("1_ppcla")
rendering_quadrant_size = 1
script = ExtResource("2_sityj")

[node name="hextile_tilemap_generator" type="Node2D" parent="."]
position = Vector2(0, -2)
script = ExtResource("3_bfsdo")
map_size_x = 5
map_size_y = 5

[node name="hextile_tilemap_movable_tiles" type="TileMapLayer" parent="."]
modulate = Color(0, 1, 0.447059, 0.588235)
tile_set = ExtResource("1_ppcla")

[node name="hextile_tilemap_movable_tiles_enemy" type="TileMapLayer" parent="."]
modulate = Color(1, 0.160784, 0.152941, 0.588235)
tile_set = ExtResource("1_ppcla")

[node name="hextile_tilemap_effects" type="TileMapLayer" parent="."]
modulate = Color(0.00994824, 0.238797, 1, 0.588235)
tile_set = ExtResource("1_ppcla")

[node name="hextile_tilemap_effects_dimmed" type="TileMapLayer" parent="."]
modulate = Color(0.314316, 0.314316, 0.314316, 0.784314)
tile_map_data = PackedByteArray("AAACAAIAAAAAAAMAAAACAAEAAAAAAAMAAAABAAIAAAAAAAMAAAABAAEAAAAAAAMAAAA=")
tile_set = ExtResource("1_ppcla")

[node name="hextile_tilemap_target_effect" type="TileMapLayer" parent="."]
modulate = Color(0, 1, 0, 1)
tile_map_data = PackedByteArray("AAAGAAYAAAAAAAIAAAAHAAcAAAAAAAIAAAAHAAYAAAAAAAIAAAAIAAcAAAAAAAIAAAA=")
tile_set = ExtResource("1_ppcla")

[node name="hextile_arrows" type="TileMapLayer" parent="."]
modulate = Color(1, 0, 0, 0.788235)
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AAAHAAMACgABAAMAAAAGAAIACgABAAMAAAAIAAMACgABAAMAAAAFAAIACgAEAAMAAAAEAAMACgAAAAUAAAAEAAQACgAAAAUAAAAFAAYACgACAAEAAAAEAAUACgAAAAMAAAAEAAIACgAFAAIAAAAKAAMACgAEAAEAAAAJAAQACgABAAIAAAAJAAMACgADAAYAAAAGAAUACgAEAAYAAAA=")
tile_set = ExtResource("4_jvagr")
script = ExtResource("5_hma6e")
default_color = Color(0, 0.207427, 0.999999, 0.74902)
